# luma

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Cargo.toml  Makefile  PKGBUILD  README  README.html  README.md  README.txt  a.out  archstr.cc  bootloader.ld  bootloader.luma  bootloader.s  cartridge.luma  changelog.html  changelog.md  checkdispsrv.c  dbgmsg.cc  example0.luma  getenv.cc  initgfx.cc  initx.c  isvkphysdevvalid.cc  kernelstr.cc  main  main.c  main.cc  main.h  make_test.sh  msg.cc  msgerr.cc  msgout.cc  setdispsrvproto.cc  strlen.cc  termgfx.cc  test.ld  test.luma  (+1 more)
examples/: example0.luma
include/: luma.hh
include/luma/: arch.h  main.h  main.hh  print.h  stdlibsock.h  utf8dec.h  utf8enc.h
include/luma/stdlibsock/: gfx.h  gfx.hh
luma/src/: luma.h  luma_abrt.c  luma_bootlder.c  luma_cart.c  luma_checkEvts.c  luma_dat.c  luma_dead.c  luma_drwVram.c  luma_initDat.c  luma_initMem.c  luma_initWin.c  luma_instrPtr.c  luma_ldBank.c  luma_ldBootlder.c  luma_ldRom.c  luma_loadRom.c  luma_mem.c  luma_memDump.c  luma_opcd.c  luma_proc.c  luma_setByte.c  luma_setDbl.c  luma_setPtrVal.c  main.c
old/: initgfx.cc  isvkphysdevvalid.cc  setdispsrvproto.cc  stdlibsock__gfx__crtwin.cc  stdlibsock__gfx__destwin.cc  termgfx.cc
old/include/luma/: main.hh
old/src/: main.cc
old/src/luma/app_t/: app_t.cc  archstr.cc  dbgmsgf.cc  exit.cc  getenv.cc  msgf.cc  msgferr.cc  msgfout.cc  strcmp.cc  strcut.cc  strlen.cc
src/: app.rs  configuration.rs  cpu.rs  cpu_handle.rs  cpu_mode.rs  exception.rs  instruction.rs  luma.rs  main.c  main.cc  main.rs  predicate.rs  shifter.rs  state.rs
src/app/: check_events.rs  draw_video.rs  init.rs  load.rs  main.rs  run.rs  sync_video.rs
src/configuration/: load.rs  validate.rs
src/cpu/: alu_exit_exception.rs  boot.rs  continue.rs  enter_exception.rs  exchange.rs  execute.rs  exit_exception.rs  fetch_arm.rs  fetch_thumb.rs  isa_adc.rs  isa_add.rs  isa_and.rs  isa_b.rs  isa_bic.rs  isa_bl.rs  isa_bx.rs  isa_cmn.rs  isa_cmp.rs  isa_eor.rs  isa_memory.rs  isa_mov.rs  isa_mul.rs  isa_mvn.rs  isa_orr.rs  isa_rsb.rs  isa_rsc.rs  isa_sbc.rs  isa_sub.rs  isa_swi.rs  isa_teq.rs  isa_tst.rs  sync_cycle.rs  take_state.rs
src/cpu_handle/: drop.rs  dump_palette.rs  dump_video.rs
src/instruction/: decode_arm.rs  decode_thumb.rs
src/luma/: agb.rs  app.rs  application.rs  arghandl.cc  configuration.rs  cpu.rs  cpu_handle.rs  device.rs  emu.rs  emulator.rs  instruction.rs  luma.cc  print.c  state.rs  utf8dec.c  utf8enc.c
src/luma/app/: check_events.rs  draw_video.rs  drop.rs  emu.rs  end.rs  ini.rs  init.rs  load.rs  new.rs  prspar.rs  run.rs  sync_video.rs  trp.rs
src/luma/app_t/: app_t.cc  arghandl.cc  kernelstr.cc  msgf.cc  msgferr.cc  msgfout.cc
src/luma/application/: bootloader.rs  decode.rs  drop.rs  end.rs  image.rs  initialise.rs  load.rs  log.rs  new.rs  parse_parameters.rs  read.rs  run.rs  trap.rs
src/luma/configuration/: create.rs  load.rs  new.rs  overwrite.rs  path.rs  validate.rs
src/luma/cpu/: add.rs  boot.rs  branch.rs  compare.rs  continue.rs  decode_arm.rs  decode_thumb.rs  exchange.rs  isa_arithmetic.rs  isa_bitwise.rs  isa_branch.rs  isa_logic.rs  isa_memory.rs  isa_move.rs  load.rs  move.rs  store.rs  subtract.rs  test_predicate.rs
src/luma/cpu_handle/: drop.rs  dump_palette.rs  dump_video.rs  kill.rs
src/luma/device/: bootloader.rs  branch.rs  check_condition.rs  condition.rs  continue.rs  decode.rs  decode_arm.rs  decode_thumb.rs  drop.rs  exchange.rs  image.rs  interrupt.rs  link.rs  load.rs  log.rs  memory.rs  move.rs  new.rs  palette.rs  pop.rs  push.rs  read.rs  shift.rs  store.rs  thumb.rs  trap.rs  video.rs  write.rs
src/luma/emu/: btl.rs  drop.rs  img.rs  new.rs  opc.rs  run.rs  trp.rs
src/luma/emulator/: bootloader.rs  drop.rs  image.rs  new.rs  opcode.rs  read.rs  run.rs  trap.rs
src/luma/state/: new.rs  read.rs  write.rs
src/shifter/: extract.rs
src/state/: bank.rs  new.rs  read.rs  shifter_value.rs  write.rs
stdlib/std/: fopen.luma  fwrite.luma  msgfout.luma
stdlib_socket/gfx/: create_window.c
stdlibsock/gfx/: crtwin.c  crtwin.cc  destwin.c  destwin.cc
