[package]
name        = "luma"
version     = "0.35.0"
authors     = ["Gabriel Jensen"]
edition     = "2021"
description = "AGB emulator."
readme      = "README.txt"
repository  = "https://mandelbrot.dk/luma"
keywords    = ["agb", "emulator", "gba"]
categories  = ["emulators"]

[[bin]]
name = "luma"
path = "src/main.rs"

[profile.dev]
overflow-checks = false

[profile.release]
lto = true

[dependencies]
configparser = "3.0.2"
libc         = "0.2.146"
sdl2         = "0.35.2"
