[package]
name        = "luma"
version     = "0.41.0"
authors     = ["Gabriel Jensen"]
edition     = "2021"
description = "AGB emulator."
readme      = "README.txt"
repository  = "https://mandelbrot.dk/luma"
keywords    = ["agb", "emulator", "gba"]
categories  = ["emulators"]

[[bin]]
name = "luma"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
toml  = "0.7.5"
libc  = "0.2.147"
sdl2  = "0.35.2"
serde = { version = "1.0.164", features = ["derive"] }
