[package]
name        = "luma"
version     = "0.45.0"
authors     = ["Gabriel Jensen"]
edition     = "2021"
description = "AGB emulator."
readme      = "README.txt"
repository  = "https://mandelbrot.dk/luma"
keywords    = ["agb", "emulator", "gba"]
categories  = ["emulators"]

[[bin]]
name = "luma"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"

[dependencies]
ctrlc = "3.4.1"
sdl2  = "0.35.2"
toml  = "0.8.4"
